# fmor.in

./: .gitignore  CLAUDE.md  Makefile  README.md  build.py  eslint.config.ts  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/workflows/: lint.yml
docs/superpowers/plans/: 2026-03-26-photoblog-plan.md  2026-03-27-parallel-build-progress.md  2026-03-27-photoblog-gallery-view.md  2026-03-28-gallery-slideshow.md  2026-03-31-header-breadcrumbs.md  2026-03-31-photoblog-history-navigation.md  2026-04-01-escape-as-arrowup.md  2026-04-01-slideshow-blur-up.md
docs/superpowers/specs/: 2026-03-26-photoblog-design.md  2026-03-27-parallel-build-progress-design.md  2026-03-28-gallery-slideshow-design.md  2026-03-31-header-breadcrumbs-design.md  2026-04-01-grid-scroll-restoration-design.md  2026-04-01-slideshow-blur-up-design.md
src/: App.vue  main.ts  style.css  types.ts
src/components/: AppHeader.vue  ExifBar.vue  GalleryCard.vue  PhotoGrid.vue  PhotoSlideshow.vue
src/composables/: useAvif.ts
src/lib/: preload.ts
src/router/: index.ts
src/stores/: galleries.ts  photoblog.ts
src/views/: GalleryIndexView.vue  GalleryView.vue  PhotoblogView.vue
static/css/: style.css
static/js/: main.js
templates/: base.html  gallery.html  gallery_index.html  index.html  photoblog.html  photoblog_gallery.html  shell.html
templates/partials/: exif.html
tests/: __init__.py  conftest.py  helpers.py  test_build.py  test_images.py  test_scanner.py
